# snake

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: State.hpp
src/: Draw.cpp  Engine.cpp  Engine.h  Input.cpp  Snake.cpp  Snake.h  Update.cpp  main.cpp  player.h
